# desktop-theme-persona

./: .gitignore  LINUX.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.cursor/: hooks.json
.cursor/hooks/: run-tests-on-stop.mjs  track-edit.mjs
.cursor/rules/: architecture.mdc  persistence-and-state.mdc  tauri-bridge.mdc  testing.mdc  ui-comic.mdc
.github/ISSUE_TEMPLATE/: chore.md  feat.md  fix.md
.github/PULL_REQUEST_TEMPLATE/: chore.md  feat.md  fix.md
.github/workflows/: release-linux.yml  release.yml
scripts/: dev-linux.sh  release-linux.sh  release.ps1
src/: main.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_search.rs  app_search_linux.rs  desktop_embed.rs  desktop_embed_stub.rs  desktop_mode.rs  file_icon.rs  launch.rs  lib.rs  main.rs  monitor_windows.rs  system.rs  system_clean.rs  system_stats.rs  wallpaper.rs
src/app/: DesktopLayout.tsx  router.tsx
src/hooks/: useCrossWindowStateSync.test.ts  useCrossWindowStateSync.ts  useEscapeToHide.ts  useParallax.ts  useTrayNavigation.ts  useWindowPlacement.ts
src/i18n/: detectLanguage.test.ts  detectLanguage.ts  index.ts  translate.ts  tt.ts  types.ts  useT.ts
src/lib/: motionPresets.ts  sectionTitles.ts
src/pages/: AppsPage.tsx  GamesPage.tsx  HomePage.tsx  ScriptsPage.tsx  SettingsPage.module.css  SettingsPage.tsx  SystemPage.tsx
src/styles/: animations.css  comic-utils.css  global.css  reset.css  tokens.css
src/test/: factories.ts  (+1 more)
(+192 files in other folders)
