[package]
name = "tauri-app"
version = "0.1.7"
description = "Persona5 Explorer desktop launcher"
authors = ["zigus"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
base64 = "0.22"
tauri-plugin-process = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"

[target.'cfg(windows)'.dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
base64 = "0.22"
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Globalization",
  "Win32_Graphics_Gdi",
  "Win32_Security",
  "Win32_System_Com",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }
windows-core = "0.61"
winreg = "0.52"
